# Mods-of-Mistria-Installer

./: .gitattributes  .gitignore  GeneratedInformation.cs  MistriaLocator.cs  ModInstaller.cs  ModsOfMistriaInstaller.csproj  ModsOfMistriaInstaller.sln  Program.cs  README.md  ROADMAP.md  TODO.md  undex.yml
.run/: ModsOfMistriaCommandLine.run.xml  ModsOfMistriaGUI.run.xml  Publish Command Line.run.xml  Publish GUI.run.xml  Publish Linux Command Line.run.xml  Publish Linux GUI.run.xml  Publish Win Command Line x64.run.xml  Publish Win Command Line x86.run.xml  Publish Win Command Line.run.xml  Publish Win GUI x64.run.xml  Publish Win GUI x86.run.xml  Publish Win GUI.run.xml
Installer/: ChecksumInstaller.cs  ConversationInstaller.cs  FiddleInstaller.cs  GenericInstaller.cs  GraphicsInstaller.cs  IModuleInstaller.cs  LocalisationInstaller.cs  ScheduleInstaller.cs
ModsOfMistriaCommandLine/: ModsOfMistriaCommandLine.csproj  Options.cs  Program.cs  app.manifest
ModsOfMistriaGUI/: App.axaml  App.axaml.cs  ModsOfMistriaGUI.csproj  Program.cs  ViewLocator.cs
ModsOfMistriaGUITests/: MainWindowTest.cs  ModsOfMistriaGUITests.csproj  TestAppBuilder.cs
ModsOfMistriaInstaller/: GeneratedInformation.cs  MistriaLocator.cs  Mod.cs  ModInstaller.cs  ModsOfMistriaInstaller.csproj  Standalone.cs
ModsOfMistriaInstallerLib/: BenchmarkModGenerator.cs  GameManifestWriter.cs  GameRestartMonitor.cs  GeneratedInformation.cs  GeneratedInformationWithMod.cs  IMod.cs  IPreinstallInfo.cs  InstallResult.cs  (+10 more)
tools/checker/: CHECKER.md  Cargo.toml  PACKAGING.md  PROBE.md
tools/checker/src/: main.rs  probe.rs  rev.rs
(+568 files in other folders)
